--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,3 +1,9 @@
+:root{
+    --backgroundColor: #F8F8F8; 
+    --disabledBackground: #B4B4B4;
+    --buttonHoverBackground: #FFE302;
+}
+
 *{
     box-sizing: border-box;
 }
@@ -5,4 +11,13 @@
 body{
     margin: 0;
     padding: 0;
+    background-color: var(--backgroundColor);
+}
+
+button{
+    
+}
+
+button:hover{
+    background-color: var(--buttonHoverBackground);
 }
