Created overlayed image and added some layout styling to TopContent

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,7 +1,15 @@
+@use "./Header.scss";
+@use "./Main_page.scss";
+@use "./Top_content.scss";
+
+
 :root{
     --backgroundColor: #F8F8F8; 
     --disabledBackground: #B4B4B4;
     --buttonHoverBackground: #FFE302;
+
+    --lightColor: #FFFFFF;
+    --transparentDarkColor: rgba(10, 10, 10, 0.5);
 }
 
 *{
