--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,7 +1,7 @@
 @use "./Header.scss";
 @use "./Main_page.scss";
 @use "./Top_content.scss";
-
+@use "./Working_with_get_request.scss";
 
 :root{
     --backgroundColor: #F8F8F8; 
