--- a/src/css/Working_with_get_request.scss
+++ b/src/css/Working_with_get_request.scss
@@ -1,4 +1,9 @@
+.workingWithGetRequest{
+    text-align: center;
+}
+
 .users{
+    margin: 40px 0 40px 0;
     display: grid;
     grid-gap: 20px;
     grid-template-columns: repeat(3, 1fr);
@@ -6,7 +11,6 @@
 
 .userCard{
     background-color: var(--lightColor);
-    text-align: center;
 
 }
 
