Added styling to 'SignUpForm'

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -2,6 +2,7 @@
 @use "./Main_page.scss";
 @use "./Top_content.scss";
 @use "./Working_with_get_request.scss";
+@use "./Working_with_post_request.scss";
 
 :root{
     --backgroundColor: #F8F8F8; 
