--- a/src/css/Top_content.scss
+++ b/src/css/Top_content.scss
@@ -3,6 +3,7 @@
     height: 100vh;
     position: relative;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
