Implemented user's long name, occupation and email hiding, added 'goToSignUp' button to top content

--- a/src/css/Top_content.scss
+++ b/src/css/Top_content.scss
@@ -11,6 +11,7 @@
 .topContentTextContainer{
     width: 30%;
     min-width: 280px;
+    color: var(--lightColor);
     text-align: center;
     position: relative;
     z-index: 1;
