--- a/src/css/Working_with_get_request.scss
+++ b/src/css/Working_with_get_request.scss
@@ -1,34 +1,43 @@
 .workingWithGetRequest{
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .users{
+    width: 90%;
     margin: 40px 0 40px 0;
     display: grid;
     grid-gap: 20px;
     grid-template-columns: repeat(3, 1fr);
 }
 
-.userCard{
+
+.userCard{ /*Do the same for user info*/
+    min-width: 320px;
     background-color: var(--lightColor);
 }
 
 .userInfo{
     width: 90%;
-    -webkit-line-clamp: 4
-}
-
-.userCard{ /*Do the same for user info*/
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
-
 }
 
 .userCard{
     >*{
         margin: 20px;
     }
+}
+
+.userCard, .userPosition, .userEmail{
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    display: inline-block;
+}
+
+.userPosition, .userEmail{
+    width: 90%;
 }
 
 .userPhoto{
@@ -38,4 +47,23 @@
 .userInfo > *{
     margin: 5px;
     display: inline-block;
+}
+
+
+@media  screen and (max-width: 768px) {
+    .users{
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+@media  screen and (max-width: 1024px) {
+    .users{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media  screen and (min-width: 1024px) {
+    .users{
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
