--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -21,6 +21,7 @@ body{
     margin: 0;
     padding: 0;
     background-color: var(--backgroundColor);
+    font-family: nunito;
     display: flex;
     flex-direction: column;
     align-items: center;
