Added class 'roundedButton' to buttons that have very rounded corners

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -36,3 +36,9 @@ button{
 button:hover{
     background-color: var(--buttonHoverBackground);
 }
+
+.roundedButton{
+    width: 6rem !important;
+    height: 2rem !important;
+    border-radius: 5rem !important;
+}
