Added class 'signUpFormTextField' for adding marin

--- a/src/css/Working_with_post_request.scss
+++ b/src/css/Working_with_post_request.scss
@@ -22,6 +22,10 @@
     width: 380px;
 }
 
+.signUpForm .signUpFormTextField{
+    margin: 1rem
+}
+
 @media screen and (max-width: 420px){
     .signUpForm input{
         width: 328px;
