--- a/src/css/Working_with_post_request.scss
+++ b/src/css/Working_with_post_request.scss
@@ -1,3 +1,9 @@
+.workingWithPostRequest{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .workingWithPostRequest h2{
     margin-top: 7rem;
     text-align: center;
@@ -8,17 +14,16 @@
 .signUpForm{
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 
 .signUpForm{
     >*{
-        margin: 1rem;
-        text-align: left;
+        margin-bottom: 1rem;
+       
     }
 }
 
-.signUpForm input{
+.signUpFormTextField{
     width: 380px;
 }
 
@@ -27,11 +32,11 @@
 }
 
 .showMore{
-    width: 400px !important;
+   
 }
 
 @media screen and (max-width: 420px){
-    .signUpForm input{
+    .signUpFormTextField{
         width: 328px;
     }
 }
