--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -21,7 +21,10 @@ body{
     margin: 0;
     padding: 0;
     background-color: var(--backgroundColor);
-    font-family: nunito;
+}
+
+.app{
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -29,7 +32,7 @@ body{
 
 button{
     width: max-content;
-    min-width: 16rem;
+    min-width: 6rem;
     height: 2rem;
     border-radius: 5rem;
 }
