All media queries moved to one file

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -3,6 +3,7 @@
 @use "./Top_content.scss";
 @use "./Working_with_get_request.scss";
 @use "./Working_with_post_request.scss";
+@use "./media_queries.scss";
 
 :root{
     --backgroundColor: #F8F8F8; 
