Added styling to window when it's visible and hidden

--- a/src/css/Message_window.scss
+++ b/src/css/Message_window.scss
@@ -8,8 +8,19 @@
     position: fixed;
     bottom: 0;
     right: 1rem;
+    transition: 0.5s;
     overflow-y: auto;
     z-index: 3;
+}
+
+.messageWindow.visible{
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.messageWindow.hidden{
+    transform: translateY(100%);
+    opacity: 0;
 }
 
 .messageTitle{
