Removed 'right' property when screen size is less that 328px

--- a/src/css/media_queries.scss
+++ b/src/css/media_queries.scss
@@ -2,6 +2,9 @@
     .users, .signUpFormTextField{
         width: 280px;
     }
+    .messageWindow{
+        right: 0;
+    }
 }
 
 @media screen and (max-width: 420px){
