--- a/src/css/Working_with_post_request.scss
+++ b/src/css/Working_with_post_request.scss
@@ -1,10 +1,10 @@
-.workingWithPostRequest{
+#workingWithPostRequest{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.workingWithPostRequest h2{
+#workingWithPostRequest h2{
     margin-top: 7rem;
     text-align: center;
 }
