--- a/src/css/media_queries.scss
+++ b/src/css/media_queries.scss
@@ -1,7 +1,4 @@
 @media  screen and (max-width: 328px) {
-    .users, .signUpFormTextField{
-        width: 280px;
-    }
     .messageWindow{
         right: 0;
     }
@@ -10,6 +7,7 @@
 @media screen and (max-width: 420px){
     .signUpFormTextField{
         width: 328px;
+        max-width: 94vw;
     }
 }
 
