Aligned all form's content to the center

--- a/src/css/Working_with_post_request.scss
+++ b/src/css/Working_with_post_request.scss
@@ -14,6 +14,7 @@
 .signUpForm{
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .signUpForm{
@@ -29,4 +30,8 @@
 
 .signUpForm > *, .signUpFormTextField{
     margin-bottom: 3rem
+}
+
+.signUpFormControll{
+    align-self: flex-start;
 }
