--- a/src/css/Working_with_get_request.scss
+++ b/src/css/Working_with_get_request.scss
@@ -5,6 +5,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    h1{
+        margin: 0
+    }
 }
 
 .users{
@@ -47,7 +51,9 @@
     border-radius: 50%;
 }
 
-.userInfo > *{
-    margin: 5px;
-    display: inline-block;
+.userInfo{
+    >*{
+        margin: 5px;
+        display: inline-block;
+    }
 }
