--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -37,9 +37,10 @@ body{
 }
 
 button{
-    width: max-content;
-    min-width: 6rem;
+    width: 6rem;
     height: 2rem;
+    min-width: max-content !important;
+    min-height: max-content !important;
     border-radius: 5rem;
 }
 
