Adapted signup success image for small screens

--- a/src/css/media_queries.scss
+++ b/src/css/media_queries.scss
@@ -2,6 +2,9 @@
     .users{
         width: 280px !important;
     }
+    .signUpSuccessImage{
+        width: 280px;
+    }
     .messageWindow{
         right: 0;
     }
