Added className to 'PhotoSelect' and 'span' representing error, changed span's color

--- a/src/css/Working_with_post_request.scss
+++ b/src/css/Working_with_post_request.scss
@@ -39,7 +39,15 @@
     align-self: flex-start;
 }
 
+.photoSelectContainer{
+    text-align: center;
+}
+
 .photoSelect{
     width: 5rem;
     height: 3.5rem;
+}
+
+.photoSelectError{
+    color: red;
 }
